<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notices</string>
    <string name="add_description">Make a new task</string>
    <string name="save_btn">SAVE</string>
    <string name="all">All</string>
    <string name="status_new">New</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="wait">Wait...</string>
    <string name="number_or_password_is_invalid">Number or password is invalid</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="passwords_doesnt_equal">Passwords doesn\'t equal.</string>
    <string name="this_phone_already_exist">This number of phone already exist.</string>
    <string name="log_in_error_message">Error on server side.</string>
    <string name="log_in_invalid_number_or_password_message">Number or password is invalid.</string>
    <string name="some_error_message">Unknowed error.</string>
    <string-array name="default_types">
        <item>Meet</item>
        <item>Buy</item>
        <item>Housework</item>
        <item>Self-development</item>
    </string-array>
    <string-array name="default_statuses">
        <item>New</item>
        <item>Active</item>
        <item>Done</item>
        <item>Fail</item>
    </string-array>
    <string name="action_log_out">Log out</string>
    <string name="action_add_notice">Add notice</string>
    <string name="action_log_in">Log in</string>
    <string name="title">Title</string>
    <string name="some_notice_text">Some notice text</string>
    <string name="remember_me">Remember me</string>
    <string name="transfer_notes">Transfer notes in the account</string>
    <string name="action_add_title">Add title</string>
    <string name="action_add_remove_title">Title</string>
    <string name="update_local_data_exception">Update local data error</string>
    <string name="action_encode_notice">Encode notice</string>
    <string name="action_decode_notice">Decode notice</string>
    <string name="action_delete_notice">Remove notice</string>
    <string name="crypt_error">Sorry, crypt error...</string>

    <string name="main_activity_title">Notices</string>
    <string name="notice_activity_title">Edit notice</string>
    <string name="log_in_activity_title">Log in</string>
    <string name="sign_up_activity_title">Sign up</string>
    <string name="action_more">More</string>
    <string name="dialog_title_encode_notice">Encode operation</string>
    <string name="dialog_title_decode_notice">Decode operation</string>
    <string name="dialog_message_enter_password">Enter key for encode/decode notice.</string>
    <string name="pref_list_themes_title">Change theme</string>
    <string name="pref_list_themes_title_dialog">Choise theme</string>
    <string name="action_settings">Settings</string>

    <string name="theme_light">Custom.Light</string>
    <string name="theme_dark">Custom.Dark</string>
</resources>
