<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_main_add_notice"
          android:title="@string/action_add_notice"
          android:icon="@drawable/ic_add_circle_outline_white_24dp"
          yourapp:showAsAction="always"/>

    <item android:id="@+id/menu_main_more"
          android:title="@string/action_more"
          android:icon="@drawable/ic_more_vert_white_24dp"
          yourapp:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_main_log_in" android:title="@string/action_log_in" android:visible="false"/>
            <item android:id="@+id/menu_main_log_out" android:title="@string/action_log_out" android:visible="false"/>
        </menu>
    </item>
</menu>