<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

    <EditText
            android:id="@+id/sign_up_activity_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:gravity="center"/>

    <EditText
            android:id="@+id/sign_up_activity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_activity_phone"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:gravity="center"/>

    <EditText
            android:id="@+id/sign_up_activity_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_activity_password"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:gravity="center"/>

    <CheckBox
            android:id="@+id/sign_up_activity_transfer_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_activity_repeat_password"
            android:hint="@string/transfer_notes"/>

    <TextView
            android:id="@+id/sign_up_activity_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_activity_transfer_notes"
            android:gravity="center"
            android:visibility="gone"/>

    <Button
            android:id="@+id/sign_up_activity_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_activity_message"
            android:text="@string/sign_up"/>

    <!--TODO добавить прогресс бар-->

</RelativeLayout>